CMAKE_MINIMUM_REQUIRED(VERSION 3.4.1)

PROJECT (HELLO)
ADD_SUBDIRECTORY(src)
# ADD_SUBDIRECTORY(doc)
INSTALL(FILES COPYRIGHT README DESTINATION share/doc/cmake/t2) # 安装COPYRIGHT/README
INSTALL(PROGRAMS runhello.sh DESTINATION bin) # 安装runhello.sh
INSTALL(DIRECTORY doc/ DESTINATION share/doc/cmake/t2)
