CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(HELLOTEST)
SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
ADD_SUBDIRECTORY(src) # 一定要保持ADD_SUBDIRECTORY(src)在SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)的后面
MESSAGE(STATUS "xxxxxxxxxxxxxxx" ${PROJECT_SOURCE_DIR})
ADD_TEST(mytest ${PROJECT_BINARY_DIR}/src/hello)
ENABLE_TESTING()
